<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="alarm"
            type="com.timilehinaregbesola.mathalarm.domain.model.Alarm" />
        <variable
            name="clickListener"
            type="com.timilehinaregbesola.mathalarm.screens.alarmlist.AlarmListener" />
    </data>

    <RelativeLayout
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{()-> clickListener.onclick(alarm)}"
        android:padding="7dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/alarm_switch_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:padding="4dp"
            android:gravity="center"
            android:layout_above="@+id/linearLayout" />

        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40sp"
            android:padding="4dp"
            tools:text="Alarm Time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/alarm_time"
            android:padding="4dp"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/alarm_repeat_sun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun" />

            <TextView
                android:id="@+id/alarm_repeat_mon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mon"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/alarm_repeat_tue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tue"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/alarm_repeat_wed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wed"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/alarm_repeat_thu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thu"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/alarm_repeat_fri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fri"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/alarm_repeat_sat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sat"
                android:gravity="center"
                android:layout_weight="1" />

        </LinearLayout>
    </RelativeLayout>
</layout>