<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="alarmSettingsViewModel"
            type="com.timilehinaregbesola.mathalarm.screens.alarmsettings.AlarmSettingsViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/settings_time_title"
                style="?android:listSeparatorTextViewStyle"/>

            <TextView
                android:id="@+id/settings_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="50sp"
                android:padding="30dp"
                android:gravity="center"
                tools:text="DISPLAY TIME HERE"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/settings_repeat_title"
                style="?android:listSeparatorTextViewStyle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/set_repeat_sun"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="-4dp"
                    android:textColor="@color/toggle_color"
                    android:textOn="@string/sun"
                    android:textOff="@string/sun"/>

                <ToggleButton
                    android:id="@+id/set_repeat_mon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:textColor="@color/toggle_color"
                    android:textOn="@string/mon"
                    android:textOff="@string/mon"/>

                <ToggleButton
                    android:id="@+id/set_repeat_tue"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:textColor="@color/toggle_color"
                    android:textOn="@string/tue"
                    android:textOff="@string/tue"/>

                <ToggleButton
                    android:id="@+id/set_repeat_wed"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:textColor="@color/toggle_color"
                    android:textOn="@string/wed"
                    android:textOff="@string/wed"/>

                <ToggleButton
                    android:id="@+id/set_repeat_thu"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:textColor="@color/toggle_color"
                    android:textOn="@string/thu"
                    android:textOff="@string/thu"/>

                <ToggleButton
                    android:id="@+id/set_repeat_fri"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:textColor="@color/toggle_color"
                    android:textOn="@string/fri"
                    android:textOff="@string/fri"/>

                <ToggleButton
                    android:id="@+id/set_repeat_sat"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_marginStart="-4dp"
                    android:textColor="@color/toggle_color"
                    android:textOn="@string/sat"
                    android:textOff="@string/sat"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/settings_repeat_text"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/settings_repeat_switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/settings_setting_title"
                style="?android:listSeparatorTextViewStyle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/settings_math_difficulty_text"/>

                <Spinner
                    android:id="@+id/settings_math_difficulty_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/settings_tone_text"/>

                <Spinner
                    android:id="@+id/settings_tone_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/settings_snooze_text"/>

                <EditText
                    android:id="@+id/settings_snooze_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginStart="50dp"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="20dp"
                    android:text="@string/minutes"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/settings_vibrate_text"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/settings_vibrate_switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <Button
                android:id="@+id/settings_test_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/settings_test"/>

        </LinearLayout>
    </ScrollView>
</layout>


