<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="alarmMathViewModel"
            type="com.timilehinaregbesola.mathalarm.presentation.alarmmath.AlarmMathViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/math_question"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    tools:text="Math Question"/>

                <TextView
                    android:id="@+id/math_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    tools:text="Math Answer"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:baselineAligned="false">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <Button
                            android:id="@+id/math_btn_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:layout_marginEnd="10dp"
                            android:text="@string/one"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />
                        <Button
                            android:id="@+id/math_btn_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:layout_marginEnd="10dp"
                            android:text="@string/two"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />
                        <Button
                            android:id="@+id/math_btn_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:text="@string/three"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <Button
                            android:id="@+id/math_btn_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:layout_marginEnd="10dp"
                            android:text="@string/four"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />
                        <Button
                            android:id="@+id/math_btn_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:layout_marginEnd="10dp"
                            android:text="@string/five"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />
                        <Button
                            android:id="@+id/math_btn_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:text="@string/six"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <Button
                            android:id="@+id/math_btn_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:layout_marginEnd="10dp"
                            android:text="@string/seven"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />
                        <Button
                            android:id="@+id/math_btn_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:layout_marginEnd="10dp"
                            android:text="@string/eight"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />
                        <Button
                            android:id="@+id/math_btn_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:text="@string/nine"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/math_btn_del"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:layout_marginEnd="10dp"
                            android:text="@string/delete"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />
                        <Button
                            android:id="@+id/math_btn_0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:layout_marginEnd="10dp"
                            android:text="@string/zero"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />
                        <Button
                            android:id="@+id/math_btn_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSkyBlue"
                            android:textColor="@color/white"
                            android:text="@string/clear"
                            android:layout_weight="1"
                            style="?android:attr/buttonBarButtonStyle" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/math_btn_set"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorSkyBlue"
                    android:textColor="@color/white"
                    android:text="@string/set"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/math_btn_snooze"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="40dp"
                    android:background="@color/colorNightBlue"
                    android:textColor="@color/white"
                    android:text="@string/snooze"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>
